# liburing-sys

./: Cargo.toml  build.rs  wrapper.c  wrapper.h
examples/: io_uring_test.rs
src/: lib.rs
